# ralf

./: .gitignore  Cargo.toml  fish  readme.md
.forgejo/workflows/: cargo-release.yml  cargo-test.yml
src/: cli.rs  cmd_clean.rs  cmd_connect.rs  cmd_download.rs  cmd_edit.rs  cmd_generate.rs  cmd_help.rs  cmd_info.rs  cmd_machine.rs  cmd_menu.rs  cmd_reset.rs  cmd_save.rs  cmd_upgrade.rs  cmd_upload.rs  cmd_which.rs  completions.rs  config_merge.rs  generator.rs  gitwrap.rs  main.rs  paths.rs  tui.rs
src/domain/: merge.rs  mod.rs  model.rs  parse.rs
tests/: connect.rs  download_upload.rs  fish.rs  generate.rs  info.rs  save.rs  which.rs  zsh.rs
tests/common/: mod.rs
