[package]
name = "ralf"
version = "0.6.1"
edition = "2021"
description = "Your Little Bash Alias Friend"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
ratatui = "0.26"
crossterm = "0.27"
dirs = "5"
shellexpand = "3"
which = "8"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"
