[package]
name = "ralf"
version = "0.6.4"
edition = "2021"
description = "Your Little Rusty Bash & zsh Alias Friend"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
ratatui = "0.30.0"
crossterm = "0.29.0"
dirs = "6.0.0"
shellexpand = "3"
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"
